Initial 1.21.5 port effort